# OMNI

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
docs/: 00_ARCHITECTURE_INDEX.md  01_definitions.md  02_budgets.md  03_cognitive_engine.md  04_quantization.md  05_continual_learning.md  06_topological_memory.md  07_truth_grounding.md  08_agent_runtime.md  09_validation.md  10_alignment_safety.md  11_adversarial_robustness.md  12_multimodal.md  13_self_healing.md  14_equity_interpretability.md  15_reasoning_planning.md  16_revised_budgets.md  17_OMNIS_COMPLETE.md
docs/v2/: 00_V2_INDEX.md  01_model_topology.md  02_budgets_v2.md  03_perspective_decay.md  04_manifold_routing.md  05_ternary_execution.md  06_holographic_memory.md  07_multi_perspective.md  08_forward_adaptation.md  09_safety_polytope.md  10_training_plan.md  11_inference_pipeline.md  12_validation_v2.md  13_issue_matrix.md
src/: lib.rs  main.rs
src/core/: mod.rs  model.rs  pdr.rs  pdr_state.rs  windowed_gqa.rs
src/decoding/: agreement.rs  calibration.rs  mod.rs  mpd.rs  perspective_config.rs
src/execution/: double_buffer.rs  mod.rs  stream_pipeline.rs  ternary_pack.rs
src/kernels/: kernel_dispatch.rs  manifold_native.rs  mod.rs  ternary_gemm_cpu.rs
src/learning/: evolutionary.rs  fmea.rs  jvp.rs  lora.rs  mod.rs
src/memory/: hdm.rs  hdm_binding.rs  hdm_codebook.rs  hdm_retrieval.rs  mod.rs
src/routing/: delta_stream.rs  manifold.rs  mod.rs  router.rs
src/runtime/: health.rs  mod.rs  pipeline.rs  provider.rs  zeroclaw.rs
src/safety/: anchors.rs  mod.rs  (+3 more)
(+3 files in other folders)
