[package]
name = "perspective"
version = "0.1.0"
edition = "2021"
authors = ["NAME0x0"]
description = "PERSPECTIVE — 1T+ sparse MoE architecture for consumer hardware"
license = "MIT"
repository = "https://github.com/NAME0x0/OMNI"

[lib]
name = "perspective"
path = "src/lib.rs"

[[bin]]
name = "perspective"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Numeric / linear algebra
ndarray = { version = "0.16", features = ["rayon", "serde"] }
num-traits = "0.2"
half = { version = "2", features = ["num-traits"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Memory-mapped I/O (NVMe streaming)
memmap2 = "0.9"

# Parallelism
rayon = "1"
crossbeam = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Bytemuck for zero-copy casting
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
approx = "0.5"
tempfile = "3"

[features]
default = ["cpu"]
cpu = []
cuda = []
hip = []
sycl = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
